update index html, working with semantic elements

--- a/index.html
+++ b/index.html
@@ -3,7 +3,53 @@
     <head>
         <meta charset="UTF-8">
     </head>
+    <style>
+        body{
+            background-color: #e8eaef
+        }
+        
+        footer {
+            background-color: #e1e5ed;
+        }
+
+        nav {
+            background-color: green;
+        }
+    </style>
     <body>
-    
+        <header>
+            <h1>Welcome</h1>
+        </header>
+        <nav> 
+            <a href="javascript:void(0);">Home</a>
+            <a href="javascript:void(0);">About</a>
+            <a href="javascript:void(0);">Contact Us</a>
+        </nav>  
+        <main>
+            <section>
+                <p>Aenean pharetra volutpat risus sed cursus. Pellentesque vitae purus interdum nisl imperdiet congue. Sed accumsan mollis erat, eget finibus eros dapibus ut. In eu turpis augue. Donec mauris urna, posuere sed rutrum non, scelerisque in massa. Phasellus dictum velit id urna commodo, sit amet pretium purus ornare. 
+                </p>
+                <p>
+                Quisque ullamcorper in ligula quis iaculis. Donec eu eleifend lectus. Sed nec augue vel nisl venenatis commodo. Nunc dapibus metus id nisi auctor tempus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent porttitor magna vitae risus condimentum rutrum. Aliquam nec dictum nisl. Maecenas ut arcu et neque tristique congue. Sed tortor sapien, varius vitae sapien vitae, pretium ultrices turpis.
+
+                </p>
+            </section>
+            <article>
+                Integer feugiat pellentesque magna, at pellentesque nisl lacinia sed. Etiam ultricies sapien non felis viverra, ac molestie nisi vestibulum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin bibendum vestibulum fermentum. Proin elementum tincidunt vehicula.
+            </article>
+            <article>
+               Quisque pulvinar interdum ante ac malesuada. In tempus ex auctor augue ultrices, sed efficitur dui mollis. <span><b>Fusce semper eget ipsum a feugiat. Nam elit risus, malesuada ac quam at, volutpat facilisis neque. Nunc mollis dui ante, dictum fermentum sapien varius et. </b></span>Cras eu posuere massa. Aenean sed metus leo. Nulla mollis tincidunt orci sed ultricies. Pellentesque elementum lectus ac convallis faucibus. Sed vel dui eu urna tempor congue.
+            </article>
+            <aside>
+                <ul>
+                    <li>USA</li>
+                    <li>Canada</li>
+                    <li>Newyork</li>
+                </ul>
+            </aside>
+        </main>
+        <footer>
+        Copy right &copy; 2017, Alrights Reserved
+        </footer>
     </body>
 </html>
