update  working with positions and height property

--- a/demos/positions/index.html
+++ b/demos/positions/index.html
@@ -32,7 +32,8 @@
         
         #second{
             position: relative;
-            bottom:20px;
+            width:300px;
+            height: 200px;
             background-color: green;
         }
         
