update working with fonts

--- a/demos/text-formatting/index.html
+++ b/demos/text-formatting/index.html
@@ -7,7 +7,17 @@
         p {
             color: green;
             text-align: center;
+            font-size: 50px;
+            font-family: "Courier New", "lucida Console", monospace
         }
+        /*
+            font family
+                Generic
+                    Serif
+                    San-Serif
+                    monospace
+                Specific family
+        */
     </style>
     <body>
         <p>
