--- a/demos/text-formatting/index.html
+++ b/demos/text-formatting/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     </head>
     <style> 
         p {
             color: green;
             text-align: center;
             font-size: 50px;
-            font-family: "Courier New", "lucida Console", monospace
+            font-family: 'Raleway', sans-serif;
         }
         /*
             font family
