update using clear property with floats

--- a/demos/floats/index.html
+++ b/demos/floats/index.html
@@ -13,7 +13,7 @@
             background-color: grey;
             border-top: 10px solid blue;
             border-bottom: 10px solid purple;
-            overflow: auto;
+            /*overflow: auto;*/
         }
         
         .left {
@@ -29,11 +29,15 @@
             background: green;
             float: right;
         }
+        .clear{
+            clear:both;
+        }
     </style>
     <body>
           <div id="parent">
              <div class="left"></div>
              <div class="right"></div>
+             <div class="clear"></div>
           </div>
     </body>
 </html>
