--- a/demos/css-backgrounds/index.html
+++ b/demos/css-backgrounds/index.html
@@ -19,7 +19,8 @@
             width: 600px;
             height: 600px;
             border : 3px solid black;
-            background: linear-gradient(red, blue);
+            background-image: url(../../images/bg.png);
+            background-repeat: no-repeat;
         }
            
     </style>
