--- a/demos/css-backgrounds/index.html
+++ b/demos/css-backgrounds/index.html
@@ -19,8 +19,9 @@
             width: 600px;
             height: 600px;
             border : 3px solid black;
-            background-image: url(../../images/bg.png);
+            background-image: url(../../images/img1.jpg);
             background-repeat: no-repeat;
+            background-position: center
         }
            
     </style>
