update using background size property

--- a/demos/css-backgrounds/index.html
+++ b/demos/css-backgrounds/index.html
@@ -21,7 +21,8 @@
             border : 3px solid black;
             background-image: url(../../images/img1.jpg);
             background-repeat: no-repeat;
-            background-position: center
+            background-position: center;
+            background-size: cover;
         }
            
     </style>
