update using background property

--- a/demos/css-backgrounds/index.html
+++ b/demos/css-backgrounds/index.html
@@ -19,11 +19,7 @@
             width: 600px;
             height: 600px;
             border : 3px solid black;
-            background-image: url(../../images/img1.jpg);
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
-            background-attachment: fixed;
+            background: #555 url(../../images/img1.jpg) no-repeat left fixed;
         }
            
     </style>
