--- a/demos/css-backgrounds/index.html
+++ b/demos/css-backgrounds/index.html
@@ -19,7 +19,7 @@
             width: 600px;
             height: 600px;
             border : 3px solid black;
-            background: #555 url(../../images/img1.jpg) no-repeat left fixed;
+            background: url(../../images/bg.png) repeat-y left, url(../../images/bg.png) repeat-y right;
         }
            
     </style>
