update using backgound property with linear gradient, images and other property values

--- a/demos/css-backgrounds/index.html
+++ b/demos/css-backgrounds/index.html
@@ -19,8 +19,8 @@
             width: 600px;
             height: 600px;
             border : 3px solid black;
-            background: url(../../images/bg.png) repeat-y left, url(../../images/bg.png) repeat-y right;
-        }
+            background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../../images/img.png) no-repeat center;
+        } 
            
     </style>
     <body>
