update css transform translate function

--- a/demos/css-tranformations/index.html
+++ b/demos/css-tranformations/index.html
@@ -16,6 +16,15 @@
             -   3d
                 
         */
+        
+        .div2{
+            width: 200px;
+            height: 200px;
+            margin: 100px;
+            background: red;
+            border: 5px solid black;
+            transform: translate(100px, 200px)
+        }
     </style>
     <body>
           <div class="div1">
