update use transform property with multiple transformation function

--- a/demos/css-tranformations/index.html
+++ b/demos/css-tranformations/index.html
@@ -31,12 +31,12 @@
             margin: 100px;
             background: red;
             border: 5px solid black;
-            transform: rotateX(0deg);
+            transform: rotateZ(0deg) scale(1,1);
             transition: transform 1s;
         }
         
         .div2:hover {
-            transform: rotateX(40deg);
+            transform: rotateZ(40deg) scale(2, 2);
         }
     </style>
     <body>
