update introducing animation iteration count property

--- a/demos/css-animations/index.html
+++ b/demos/css-animations/index.html
@@ -43,6 +43,7 @@
             position: relative;
             animation-name: sample;
             animation-duration: 4s;
+            animation-iteration-count: infinite;
         }
         
         @keyframes sample {
