update using animation delay propery

--- a/demos/css-animations/index.html
+++ b/demos/css-animations/index.html
@@ -44,6 +44,7 @@
             animation-name: sample;
             animation-duration: 4s;
             animation-iteration-count: infinite;
+            animation-delay: 3s;
         }
         
         @keyframes sample {
