update use of shorthand method for animation

--- a/demos/css-animations/index.html
+++ b/demos/css-animations/index.html
@@ -42,9 +42,7 @@
             height: 200px;
             position: relative;
             animation-name: sample;
-            animation-duration: 4s;
-            animation-iteration-count: infinite;
-            animation-delay: 3s;
+            animation: sample 4s infinite 2s;
         }
         
         @keyframes sample {
