update introducing flex and direction property

--- a/demos/css-flexbox/index.html
+++ b/demos/css-flexbox/index.html
@@ -18,6 +18,8 @@
         */
         #flexbox {
             background: grey;
+            display: flex; /*initiate flex usage*/
+            direction: rtl; /*initiate change of direction for flex items (default value is row)*/
         }
         #flex1 {
             width: 200px;
