update flex using flex-direction

--- a/demos/css-flexbox/index.html
+++ b/demos/css-flexbox/index.html
@@ -19,7 +19,7 @@
         #flexbox {
             background: grey;
             display: flex; /*initiate flex usage*/
-            direction: rtl; /*initiate change of direction for flex items (default value is row)*/
+            flex-direction: row-reverse;
         }
         #flex1 {
             width: 200px;
