update using flex direction

--- a/demos/css-flexbox/index.html
+++ b/demos/css-flexbox/index.html
@@ -18,8 +18,8 @@
         */
         #flexbox {
             background: grey;
-            display: flex; /*initiate flex usage*/
-            flex-direction: row-reverse;
+            display: flex; /*initiate flex */
+            flex-direction: row-reverse; /*(values: column; colomn-reverse)*/
         }
         #flex1 {
             width: 200px;
