update usage of justify content property

--- a/demos/css-flexbox/index.html
+++ b/demos/css-flexbox/index.html
@@ -19,7 +19,7 @@
         #flexbox {
             background: grey;
             display: flex; /*initiate flex */
-            flex-direction: row-reverse; /*(values: column; colomn-reverse)*/
+            justify-content: space-around;
         }
         #flex1 {
             width: 200px;
