--- a/demos/css-flexbox/index.html
+++ b/demos/css-flexbox/index.html
@@ -30,6 +30,7 @@
             width: 200px;
             height: 200px;
             background: green;
+            flex: 2;
         }
         #flex3 {
             width: 200px;
